unpackaged/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <description>Custom Object Used for Tracking Feedback During Testing and Launch</description>
    <label>Feedback</label>
    <nameField>
        <displayFormat>FB-{0000}</displayFormat>
        <label>Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>