unpackaged/main/default/objects/Feedback__c/fields/Deployment_Status__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Status__c</fullName>
    <label>Deployment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Added to Change Set</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Manual Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>