unpackaged/main/default/objects/Feedback__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>For the technical team's use</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>