unpackaged/main/default/objects/Feedback__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <label>Estimate Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>