unpackaged/main/default/objects/Feedback__c/fields/EstimateNumber__c.field-meta.xml
<CustomField>
    <fullName>EstimateNumber__c</fullName>
    <inlineHelpText>How long this ticket will take you to complete the build and QA on? 1=1 day, 3=a few days, 5=a whole sprint. Anything that takes longer than 2 weeks, should be broken up into smaller components. Anything that takes less than a day should have a null estimate.</inlineHelpText>
    <label>Estimate</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>