unpackaged/main/default/objects/Feedback__c/fields/Example_URL__c.field-meta.xml
<CustomField>
    <fullName>Example_URL__c</fullName>
    <inlineHelpText>Copy the URL from your browser's address bar and paste it into this field. *This is required for all Migration feedback.</inlineHelpText>
    <label>Example URL</label>
    <type>Url</type>
</CustomField>