unpackaged/main/default/objects/Feedback__c/fields/Feedback_Status__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Status__c</fullName>
    <label>Feedback Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Needs Requirements</fullName>
            </value>
            <value>
                <fullName>In IT Assessment</fullName>
            </value>
            <value>
                <fullName>Ready for Sprint Scheduling</fullName>
            </value>
            <value>
                <fullName>Assigned to Sprint</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Build in Progress</fullName>
            </value>
            <value>
                <fullName>Build Complete</fullName>
            </value>
            <value>
                <fullName>In QA</fullName>
            </value>
            <value>
                <fullName>In UAT</fullName>
            </value>
            <value>
                <fullName>Ready for Production</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed - No Longer Required</fullName>
            </value>
            <value>
                <fullName>Closed - Duplicate</fullName>
            </value>
            <value>
                <fullName>Closed - Known Salesforce Limitation</fullName>
            </value>
            <value>
                <fullName>Closed - Deferred</fullName>
            </value>
            <value>
                <fullName>Closed - Address via User Story</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>