unpackaged/main/default/objects/Feedback__c/fields/Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Type__c</fullName>
    <inlineHelpText>Select the category that best fits your Feedback record. If you aren't sure, take your best guess.</inlineHelpText>
    <label>Feedback Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Data cleanup or project</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Migrated Data</fullName>
            </value>
            <value>
                <fullName>New User Request</fullName>
            </value>
            <value>
                <fullName>Reports, Dashboards, List Views</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>System Functionality</fullName>
            </value>
            <value>
                <fullName>Training or User Questions</fullName>
            </value>
            <value>
                <fullName>User Deactivation</fullName>
            </value>
            <value>
                <fullName>User Experience</fullName>
            </value>
            <value>
                <fullName>User Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>