unpackaged/main/default/objects/Feedback__c/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <inlineHelpText>Enter the field name(s) related to the Feedback. *This is required for Migrated Data Feedback.</inlineHelpText>
    <label>Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>