unpackaged/main/default/objects/Feedback__c/fields/Migrated_Data_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Data_Update_Status__c</fullName>
    <inlineHelpText>indicates if we will update the migrated data in the Full Sandbox prior to Launch and if so, the status of that work</inlineHelpText>
    <label>Migrated Data Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deferred to Launch</fullName>
                <default>true</default>
                <label>Deferred to Launch</label>
            </value>
            <value>
                <fullName>Remigration Needed</fullName>
            </value>
            <value>
                <fullName>Remigration Completed</fullName>
            </value>
            <value>
                <fullName>Remigration Needed - Prod and HellerFul</fullName>
            </value>
            <value>
                <fullName>Remigration Needed - Production Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>