unpackaged/main/default/objects/Feedback__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <inlineHelpText>Enter the name of the object or tab related to the Feedback record. Examples include but aren't limited to: Contacts, Accounts, Leads, Opportunities, Cases, Development Strategies, Tasks/Events, Campaigns. *This is required for Migrated Data Feedback.</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>