unpackaged/main/default/objects/Feedback__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Must</fullName>
            </value>
            <value>
                <fullName>Should</fullName>
            </value>
            <value>
                <fullName>Could</fullName>
            </value>
            <value>
                <fullName>Omit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>