unpackaged/main/default/objects/Feedback__c/fields/Sandbox_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Created_By__c</fullName>
    <label>Sandbox Created By_DEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>