unpackaged/main/default/objects/Feedback__c/fields/Sandbox_Feedback_Name__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Feedback_Name__c</fullName>
    <label>Sandbox Feedback Name_DEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>