unpackaged/main/default/objects/Feedback__c/fields/Stakeholder_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Deadline__c</fullName>
    <inlineHelpText>Used to track deadlines external to IT's processes, and ideally even external to EDF. For example, a fellow app ticket would have the fellow app launch date in this field.</inlineHelpText>
    <label>Stakeholder Deadline</label>
    <type>Date</type>
</CustomField>