unpackaged/main/default/objects/Feedback__c/fields/Steps_to_Test__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_Test__c</fullName>
    <inlineHelpText>What are the actions you took or click path that led to this observation?</inlineHelpText>
    <label>Steps to Test</label>
    <type>TextArea</type>
</CustomField>