unpackaged/main/default/objects/Feedback__c/recordTypes/Ongoing_Support.recordType-meta.xml
<RecordType>
    <fullName>Ongoing_Support</fullName>
    <active>true</active>
    <description>Feedback for continuing support requests</description>
    <label>Ongoing Support</label>
</RecordType>