unpackaged/main/default/objects/Feedback__c/validationRules/Object_field_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Object_field_is_required</fullName>
    <active>true</active>
    <description>Object field – required if Feedback type = Migrated Data OR ‘requires update to data map’ – TRUE</description>
    <errorConditionFormula>AND
(
	OR
	(
		ISPICKVAL(Feedback_Type__c, 'Migrated Data'),
		Requires_update_to_Datamap__c
	),
	ISBLANK( Object__c) 
)</errorConditionFormula>
    <errorMessage>Object field is required if Feedback type = Migrated Data OR Requires update to data map is TRUE</errorMessage>
</ValidationRule>