unpackaged/main/default/objects/Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Feedback_Title__c</columns>
    <columns>Description__c</columns>
    <columns>Resolution_Notes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Feedback_Status__c</columns>
    <columns>Feedback_Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Object__c</columns>
    <columns>QC_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>