unpackaged/main/default/objects/Feedback__c/listViews/Alyssa_s_CC_Feedback.listView-meta.xml
<ListView>
    <fullName>Alyssa_s_CC_Feedback</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Feedback_Title__c</columns>
    <columns>Feedback_Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>startsWith</operation>
        <value>Alyssa,Ashley,Hayley</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>10/15/2022 12:00 AM</value>
    </filters>
    <label>Climate Corps Feedback</label>
    <sharedTo>
        <group>Climate_Corps</group>
    </sharedTo>
</ListView>