unpackaged/main/default/objects/Feedback__c/listViews/Available_for_Assignment.listView-meta.xml
<ListView>
    <fullName>Available_for_Assignment</fullName>
    <columns>NAME</columns>
    <columns>Feedback_Title__c</columns>
    <columns>Description__c</columns>
    <columns>Resolution_Notes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Feedback_Status__c</columns>
    <columns>Feedback_Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Object__c</columns>
    <columns>QC_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Feedback_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Closed - No Longer Required,Closed - Duplicate,Closed - Known Salesforce Limitation,Closed - Deferred,Closed - Address via User Story</value>
    </filters>
    <filters>
        <field>Priority__c</field>
        <operation>notEqual</operation>
        <value>Omit</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>5/24/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>notContain</operation>
        <value>lyn rowland,alicia loug,kristen</value>
    </filters>
    <label>Available for Assignment</label>
</ListView>