unpackaged/main/default/objects/Feedback__c/listViews/Development_Feedback.listView-meta.xml
<ListView>
    <fullName>Development_Feedback</fullName>
    <filterScope>Queue</filterScope>
    <label>Development</label>
    <queue>Development</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>