unpackaged/main/default/objects/Feedback__c/listViews/Feedback_Records_Created_By_SRM.listView-meta.xml
<ListView>
    <fullName>Feedback_Records_Created_By_SRM</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Feedback_Title__c</columns>
    <columns>Description__c</columns>
    <columns>Feedback_Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Lok Yem,Kathryn Chiasson,Ruby Roca,Lauren Wolpin</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Feedback__c.Implementation,Feedback__c.Ongoing_Support,Feedback__c.Testing_Confirmation</value>
    </filters>
    <label>Feedback Records Created By SRM</label>
</ListView>