unpackaged/main/default/objects/Feedback__c/listViews/Feedback_Submitted_by_Dev_Data.listView-meta.xml
<ListView>
    <fullName>Feedback_Submitted_by_Dev_Data</fullName>
    <columns>NAME</columns>
    <columns>Feedback_Title__c</columns>
    <columns>Feedback_Type__c</columns>
    <columns>Object__c</columns>
    <columns>Fields__c</columns>
    <columns>Feedback_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Matt Duprey,Liam Leslie,Alicia Verstynen,Ilana Moreno,Ilana Lester Moreno,Camille Britton-De Jesus,Kristin Rodriguez</value>
    </filters>
    <label>Feedback Submitted by Dev Data</label>
</ListView>