unpackaged/main/default/objects/Feedback__c/listViews/Feedbacks_by_Approval.listView-meta.xml
<ListView>
    <fullName>Feedbacks_by_Approval</fullName>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>Approval_Date__c</columns>
    <columns>Feedback_Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Description__c</columns>
    <columns>Resolution_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Feedbacks by Approval</label>
</ListView>